[gd_scene load_steps=9 format=2]

[ext_resource path="res://src/HUD.tres" type="DynamicFontData" id=1]
[ext_resource path="res://src/HUD.gd" type="Script" id=2]
[ext_resource path="res://assets/OG_assets/banner_organ.png" type="Texture" id=3]
[ext_resource path="res://assets/OG_assets/banner_fruit.png" type="Texture" id=4]

[sub_resource type="DynamicFont" id=5]
size = 100
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 100
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
size = 40
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=7]
size = 40
font_data = ExtResource( 1 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="Fruit" type="TextureRect" parent="."]
margin_left = 1178.0
margin_top = 3.0
margin_right = 2138.0
margin_bottom = 492.0
rect_scale = Vector2( 0.786408, 0.786408 )
texture = ExtResource( 4 )

[node name="Organ" type="TextureRect" parent="."]
margin_left = -7.0
margin_top = -2.0
margin_right = 749.0
margin_bottom = 584.0
rect_scale = Vector2( 0.783698, 0.783698 )
texture = ExtResource( 3 )

[node name="Fruit_Score" type="Label" parent="."]
anchor_left = 0.77
anchor_top = 0.051
anchor_right = 0.77
anchor_bottom = 0.051
margin_left = 165.6
margin_top = 126.92
margin_right = 357.6
margin_bottom = 287.92
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 5 )
text = "0"
align = 1
__meta__ = {
"_edit_group_": true
}

[node name="Organ_Score" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.136
anchor_right = 0.5
anchor_bottom = 0.136
margin_left = -803.0
margin_top = -16.88
margin_right = -742.0
margin_bottom = 84.12
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "0"
align = 1
__meta__ = {
"_edit_group_": true
}

[node name="Start_Button" type="Button" parent="."]
visible = false
anchor_left = 0.499
anchor_top = 0.811
anchor_right = 0.499
anchor_bottom = 0.811
margin_left = -85.08
margin_top = -46.8801
margin_right = 84.92
margin_bottom = 46.1199
custom_fonts/font = SubResource( 6 )
text = "Start"

[node name="Reset" type="Button" parent="."]
anchor_bottom = 0.021
margin_left = 872.0
margin_top = 960.0
margin_right = 1129.0
margin_bottom = 1036.32
custom_fonts/font = SubResource( 7 )
text = "Reset"
icon_align = 1

[connection signal="pressed" from="Start_Button" to="." method="_on_Start_Button_pressed"]
[connection signal="pressed" from="Reset" to="." method="_on_Reset_pressed"]
